--- a/contactenos.html
+++ b/contactenos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>CompuParts</title>
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="Css/estilo.css">
 
 		<script type="text/javascript">
 		
@@ -25,7 +25,7 @@
 		<div id="principal">
 			<header>
 				<div id="logo">
-					<img src="img/logo.png" width="150" height="100">
+					<img src="Img/logo.png" width="150" height="100">
 				</div>
 	
 				<p id=miDia> </p>
