--- a/Quienes.html
+++ b/Quienes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="Css/estilo.css">
 <style>
 
 </style>
@@ -12,7 +12,7 @@
     <div id="principal">
         <header>
             <div id="logo">
-                <img src="img/logo.png" width="150" height="100">
+                <img src="Img/logo.png" width="150" height="100">
             </div>
 
             <p id=miDia> </p>
