--- a/Quienes.html
+++ b/Quienes.html
@@ -44,7 +44,7 @@
         </header>
 
         <section id="slide">
-            <img src="img/slider1.jpg" width="900" height="250">
+            <img src="Img/slider1.jpg" width="900" height="250">
     </section>
 
     <section id="quie">
@@ -65,7 +65,7 @@ Ofrecemos garantias con el tiempo estipulado del fabricante, y aceptamos devoluc
 <h3>Compromiso</h3>
 Nos mantenemos en constante comunicación con nuestros clientes para tener una retroalimentación constante de nuestros productos en el catálogo.
 
-<center><img src="img/gabriel.jpg" width="240" height="280">
+<center><img src="Img/gabriel.jpg" width="240" height="280">
 <p><i>Gabriel Sanchez, creador y director de CompuParts</i></p></center>
 <br><br>
     </p>
