--- a/productos.html
+++ b/productos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="Css/estilo.css">
 <style>
 
 </style>
@@ -12,7 +12,7 @@
     <div id="principal">
         <header>
             <div id="logo">
-                <img src="img/logo.png" width="150" height="100">
+                <img src="Img/logo.png" width="150" height="100">
             </div>
 
             <p id=miDia> </p>
@@ -44,14 +44,14 @@
         </header>
 
         <section id="slide">
-            <img src="img/slider1.jpg" width="900" height="250">
+            <img src="Img/slider1.jpg" width="900" height="250">
     </section>
 
 
 <h2 style="text-align:center">Nuestros Productos</h2>
 <div class="card-container">
   <div class="card">
-    <img src="img/headset.jpg" alt="headset" style="width:100%">
+    <img src="Img/headset.jpg" alt="headset" style="width:100%">
     <h1 class="product-title">Razer Kraken Tournament Edition</h1>
     <p class="price">$59.99</p>
     <p class="description">El sonido no es solo una mera experiencia , aumenta sus sentidos. Cuando sabes exactamente dónde está posicionado el enemigo, tú eres el que configura la emboscada. 
@@ -60,7 +60,7 @@
   </div>
 
   <div class="card">
-      <img src="img/mouse.jpg" alt="mouse" style="width:300px; height: 300px;">
+      <img src="Img/mouse.jpg" alt="mouse" style="width:300px; height: 300px;">
       <h1 class="product-title">Mouse optico Logitech G Pro</h1>
       <p class="price">$139.99</p>
       <p class="description">Pro Gaming Mouse es creado por Logitech G y eSPORTS profesionales para rendimiento superiores de la competencia Play
@@ -70,7 +70,7 @@
     </div>
 
     <div class="card">
-      <img src="img/teclado.jpg" alt="teclado" style="width:300px; height: 300px;">
+      <img src="Img/teclado.jpg" alt="teclado" style="width:300px; height: 300px;">
       <h1 class="product-title">Teclado Corsair K70 Rgb</h1>
       <p class="price">$70.99</p>
       <p class="description">Teclado Corsair K70 RGB , mecánico, Multimedia, USB, retroiluminado
@@ -80,7 +80,7 @@
     </div>
 
     <div class="card">
-      <img src="img/monitor.jpg" alt="monitor" style="width:300px; height: 300px;">
+      <img src="Img/monitor.jpg" alt="monitor" style="width:300px; height: 300px;">
       <h1 class="product-title">BenQ Zowie XL2411 24" LED 144Hz</h1>
       <p class="price">$259.99</p>
       <p class="description">Te presentamos el monitor Zowie XL2411 24" LED 144Hz de Benq, un nuevo monitor e-Sports para competición en PC.
@@ -89,7 +89,7 @@
     </div>
 
     <div class="card">
-      <img src="img/caja.jpg" alt="caja" style="width:300px; height: 300px;">
+      <img src="Img/caja.jpg" alt="caja" style="width:300px; height: 300px;">
       <h1 class="product-title">NZXT H500 Compact Mid-Tower</h1>
       <p class="price">$99.99</p>
       <p class="description">Caja para PC con 2 ventiladores AER F, panel lateral de cristal templado, 2 puertos USB 3.0, compatible con placas base ATX, MicroATX y Mini-ITX, color blanco y negro</p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="card">
-      <img src="img/intel.jpg" alt="intel" style="width:100%">
+      <img src="Img/intel.jpg" alt="intel" style="width:100%">
       <h1 class="product-title">Procesador Intel Core i9-10900X</h1>
       <p class="price">$799.99</p>
       <p class="description">Procesador de sobremesa 10 núcleos de hasta 4,7 GHz desbloqueado LGA2066 serie X299 165W</p>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="card">
-      <img src="img/madre.jpg" alt="madre" style="width:100%">
+      <img src="Img/madre.jpg" alt="madre" style="width:100%">
       <h1 class="product-title">Asus Prime B450M-A</h1>
       <p class="price">$199.99</p>
       <p class="description">Alimentado por procesadores AMD Ryzen AM4 de segunda generación para maximizar la conectividad y la velocidad con NVMe M.2, USB 3.1 Gen2, DDR4 y Gigabit LAN</p>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="card">
-      <img src="img/aio.jpg" alt="aio" style="width:100%">
+      <img src="Img/aio.jpg" alt="aio" style="width:100%">
       <h1 class="product-title">Cooler Master MasterLiquid LC120E RGB </h1>
       <p class="price">$124.99</p>
       <p class="description">todo en uno CPU refrigeración líquida con bomba de doble cámara para procesadores AMD e Intel</p>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="card">
-      <img src="img/psu.jpg" alt="psu" style="width:100%">
+      <img src="Img/psu.jpg" alt="psu" style="width:100%">
       <h1 class="product-title">EVGA Supernova 220-G2-0550</h1>
       <p class="price">$139.99</p>
       <p class="description">Certificado 80 plus Gold, con un 91% de eficiencia o más bajo cargas típicas
@@ -130,7 +130,7 @@
     </div>
 
     <div class="card">
-      <img src="img/ram.jpg" alt="ram" style="width:100%">
+      <img src="Img/ram.jpg" alt="ram" style="width:100%">
       <h1 class="product-title"> Corsair VENGEANCE RGB PRO 32GB</h1>
       <p class="price">$154.99</p>
       <p class="description">Iluminación RGB dinámica multizona.
