--- a/contactenos.html
+++ b/contactenos.html
@@ -49,7 +49,7 @@
 				<nav class="menu">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="quienes.html">Quienes Somos</a></li>
+						<li><a href="Quienes.html">Quienes Somos</a></li>
 						<li><a href="productos.html">Productos</a></li>
 						<li><a href="contactenos.html">Contactenos</a></li>
 					</ul>
@@ -57,7 +57,7 @@
 			</header>
 
 			<section id="slide">
-				<img src="img/slider1.jpg" width="900" height="250">
+				<img src="Img/slider1.jpg" width="900" height="250">
 			</section>
 
 			<section id="categorias">
