--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<header>
 				<div id="logo">
 					<a href="index.html"></a>
-					<img src="img/logo.png" width="150" height="100">
+					<img src="Img/logo.png" width="150" height="100">
 				</div>
 
 				<p id=miDia> </p>
@@ -41,7 +41,7 @@
 			</header>
 
 			<section id="slide">
-				<img src="img/slider1.jpg" width="900" height="250">
+				<img src="Img/slider1.jpg" width="900" height="250">
 			</section>
 			
 			<section id="bienv">
@@ -65,7 +65,7 @@
 					<a href="" class="leer-mas">Leer más</a><br><br>
 				</section>
 				<section class="uno dos">
-					<img src="img/productos.jpg" width="250" height="150" >
+					<img src="Img/productos.jpg" width="250" height="150" >
 					<h2>Productos</h2>
 					<p class="parrafo">
 						Visita nuestro catalogo de productos, de seguro encontraras lo que tu necesitas.
