--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</header>
 
 			<section id="slide">
-				<img src="Img/slider1.jpg" width="900" height="250">
+				<img src="Img/Slider1.jpg" width="900" height="250">
 			</section>
 			
 			<section id="bienv">
