--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			<section id="categorias">
 				<section class="uno">
-					<img src="img/quien.png" width="250" height="150" >
+					<img src="Img/quien.png" width="250" height="150" >
 					<h2>Quienes Somos</h2>
 					<p class="parrafo">
 						Conoce mas sobre nuestra trayectoria en el mercado de componentes para tu computadora.
