--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						Conoce mas sobre nuestra trayectoria en el mercado de componentes para tu computadora.
 				
 					</p>
-					<a href="" class="leer-mas">Leer más</a><br><br>
+					<a href="Quienes.html" class="leer-mas">Leer más</a><br><br>
 				</section>
 				<section class="uno dos">
 					<img src="Img/productos.jpg" width="250" height="150" >
@@ -70,7 +70,7 @@
 					<p class="parrafo">
 						Visita nuestro catalogo de productos, de seguro encontraras lo que tu necesitas.
 					</p>
-					<a href="" class="leer-mas">Leer más</a><br><br>
+					<a href="productos.html" class="leer-mas">Leer más</a><br><br>
 				</section>
 		
 			</section><!--/categorias-->
