--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<img src="Img/quien.png" width="250" height="150" >
 					<h2>Quienes Somos</h2>
 					<p class="parrafo">
-						Conoce mas sobre nuestra trayectoria en el mercado de componentes para tu computadora.
+						Conoce mas sobre nuestra trayectoria en el mercado de componentes informaticos.
 				
 					</p>
 					<a href="Quienes.html" class="leer-mas">Leer más</a><br><br>
