--- a/Quienes.html
+++ b/Quienes.html
@@ -36,7 +36,7 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="quienes.html">Quienes Somos</a></li>
+                    <li><a href="Quienes.html">Quienes Somos</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="contactenos.html">Contactenos</a></li>
                 </ul>
